--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "browser-sync": "^2.24.5",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.1",
-    "gulp-csso": "^3.0.1",
+    "gulp-cssmin": "^0.2.0",
     "gulp-imagemin": "^4.1.0",
     "gulp-sass": "^4.0.1",
     "gulp-sourcemaps": "^2.6.4",
