--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gulp-postcss": "^8.0.0",
     "gulp-pug": "^4.0.1",
     "gulp-sass": "^4.0.2",
+    "gulp-tinypng-compress": "^1.2.1",
     "gulp-uglify": "^3.0.1",
     "postcss-clean": "^1.1.0",
     "postcss-import": "^12.0.1",
