--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "autoprefixer": "^9.4.3",
     "browser-sync": "^2.26.3",
     "gulp": "^4.0.0",
+    "gulp-jade": "^1.1.0",
     "gulp-postcss": "^8.0.0",
     "gulp-pug": "^4.0.1",
     "gulp-sass": "^4.0.2",
