--- a/package.json
+++ b/package.json
@@ -1,10 +1,16 @@
 {
   "name": "kurtobando",
-  "version": "1.0.0",
-  "description": "kurtobando.com portfolio page",
-  "main": "index.js",
+  "version": "2.0.0",
+  "description": "Hi, my name is Kurt. An aspiring cinematographer and front-end developer, founder of cityescape.ph. This is the repository for my portfolio where I showcase my skills.",
+  "main": "gulpfile.js",
   "author": "kurtobando",
   "license": "MIT",
+  "scripts": {
+	"test": "echo \"Error: no test specified\" && exit 1",
+	"build": "gulp build",
+	"watch": "gulp watch",
+	"clean": "rm -r ./dist/*"
+  },
   "dependencies": {
     "normalize.css": "^8.0.1"
   },
