--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "author": "kurtobando",
   "license": "MIT",
   "scripts": {
-	"test": "echo \"Error: no test specified\" && exit 1",
-	"build": "gulp build",
-	"watch": "gulp watch",
-	"clean": "rm -r ./dist/*"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "gulp build",
+    "watch": "gulp watch",
+    "clean": "rm -r ./dist/*"
   },
   "dependencies": {
     "normalize.css": "^8.0.1"
@@ -26,6 +26,9 @@
     "gulp-uglify": "^3.0.1",
     "postcss-clean": "^1.1.0",
     "postcss-import": "^12.0.1",
-    "postcss-pxtorem": "^4.0.1"
+    "postcss-pxtorem": "^4.0.1",
+    "webpack": "^4.30.0",
+    "webpack-cli": "^3.3.1",
+    "webpack-stream": "^5.2.1"
   }
 }
