added axios for xmlhr

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^9.4.3",
+    "axios": "^0.18.0",
     "browser-sync": "^2.26.3",
     "gulp": "^4.0.0",
     "gulp-jade": "^1.1.0",
