--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gulp-pug": "^4.0.1",
     "gulp-sass": "^4.0.2",
     "gulp-tinypng-compress": "^1.2.1",
+    "jquery": "^3.4.1",
     "postcss-clean": "^1.1.0",
     "postcss-import": "^12.0.1",
     "postcss-pxtorem": "^4.0.1",
