--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gatsby": "^2.23.12",
     "gatsby-plugin-react-helmet": "^3.3.10",
     "gatsby-plugin-sass": "^2.3.12",
+    "gatsby-source-filesystem": "^2.3.24",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0"
