--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express": "^4.17.1",
     "express-validator": "^6.6.1",
     "gatsby": "^2.23.12",
+    "gatsby-plugin-google-analytics": "^2.3.15",
     "gatsby-plugin-react-helmet": "^3.3.10",
     "gatsby-plugin-sass": "^2.3.12",
     "gatsby-source-filesystem": "^2.3.24",
