--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,10 @@
 {
-  "arrowParens": "avoid",
-  "semi": false
+  "printWidth": 120,
+  "semi": false,
+  "singleQuote": false,
+  "tabWidth": 4,
+  "useTabs": false,
+  "bracketSpacing": true,
+  "jsxBracketSameLine": true,
+  "arrowParens": "always"
 }
