--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "bootstrap": "^4.5.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
+    "dotenv": "9.0.2",
     "express": "^4.17.1",
     "express-validator": "^6.6.1",
     "gatsby": "^2.23.12",
