--- a/package.json
+++ b/package.json
@@ -25,21 +25,21 @@
     "dotenv": "9.0.2",
     "express": "^4.17.1",
     "express-validator": "^6.6.1",
-    "gatsby": "^2.23.12",
-    "gatsby-plugin-google-analytics": "^2.3.15",
-    "gatsby-plugin-react-helmet": "^3.3.10",
-    "gatsby-plugin-sass": "^2.3.12",
-    "gatsby-source-filesystem": "^2.3.24",
-    "gatsby-transformer-remark": "^2.8.28",
+    "gatsby": "^3.5.0",
+    "gatsby-plugin-google-analytics": "^3.5.0",
+    "gatsby-plugin-react-helmet": "^4.5.0",
+    "gatsby-plugin-sass": "^4.5.0",
+    "gatsby-source-filesystem": "^3.5.0",
+    "gatsby-transformer-remark": "^4.2.0",
     "helmet": "^4.1.0",
     "nodemailer": "^6.4.11",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
-    "react-hook-form": "^6.7.0"
+    "react-hook-form": "6.7.0"
   },
   "devDependencies": {
-    "node-sass": "^4.14.1",
+    "node-sass": "^6.0.0",
     "nodemon": "^2.0.4",
     "prettier": "2.0.5"
   },
