--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express": "^4.17.1",
     "express-validator": "^6.6.1",
     "gatsby": "^3.5.0",
+    "gatsby-plugin-advanced-sitemap": "^1.6.0",
     "gatsby-plugin-google-analytics": "^3.5.0",
     "gatsby-plugin-react-helmet": "^4.5.0",
     "gatsby-plugin-sass": "^4.5.0",
