--- a/package.json
+++ b/package.json
@@ -4,47 +4,22 @@
   "version": "0.1.0",
   "license": "MIT",
   "scripts": {
-    "build": "gatsby build",
-    "develop": "gatsby develop",
-    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
-    "start": "npm run develop",
-    "serve": "gatsby serve",
-    "server": "node server/server.js",
-    "dev-server": "NODE_ENV=development nodemon server/server.js",
-    "clean": "gatsby clean",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.30",
-    "@fortawesome/free-brands-svg-icons": "^5.14.0",
-    "@fortawesome/react-fontawesome": "^0.1.11",
-    "axios": "^0.21.1",
-    "bootstrap": "^4.5.0",
-    "compression": "^1.7.4",
-    "cors": "^2.8.5",
-    "dotenv": "9.0.2",
-    "express": "^4.17.1",
-    "express-validator": "^6.6.1",
-    "gatsby": "^3.5.0",
-    "gatsby-plugin-advanced-sitemap": "^1.6.0",
-    "gatsby-plugin-google-analytics": "^3.5.0",
-    "gatsby-plugin-react-helmet": "^4.5.0",
-    "gatsby-plugin-sass": "^4.5.0",
-    "gatsby-source-filesystem": "^3.5.0",
-    "gatsby-transformer-remark": "^4.2.0",
-    "helmet": "^4.1.0",
-    "nodemailer": "^6.4.11",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-helmet": "^6.1.0",
-    "react-hook-form": "6.7.0"
+    "next": "11.0.1",
+    "react": "17.0.2",
+    "react-dom": "17.0.2"
   },
   "devDependencies": {
-    "node-sass": "^6.0.0",
-    "nodemon": "^2.0.4",
-    "prettier": "2.0.5"
+    "@types/react": "17.0.11",
+    "eslint": "7.29.0",
+    "eslint-config-next": "11.0.1",
+    "typescript": "4.3.4"
   },
   "repository": "git@github.com:kurtobando/kurtobando.git",
-  "author": "Kurt Obando <kurtobando.developer@gmail.com>",
-  "main": "index.js"
+  "author": "Kurt Obando <kurtobando.developer@gmail.com>"
 }
