--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/error-message": "^2.0.0",
     "autoprefixer": "^10.2.6",
     "next": "11.0.1",
     "postcss": "^8.3.5",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-hook-form": "^7.9.0",
     "tailwindcss": "^2.2.4"
   },
   "devDependencies": {
