--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@hookform/error-message": "^2.0.0",
     "autoprefixer": "^10.2.6",
+    "axios": "^0.21.1",
     "next": "11.0.1",
     "postcss": "^8.3.5",
     "react": "17.0.2",
