--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "autoprefixer": "^10.2.6",
     "axios": "^0.21.1",
     "next": "11.0.1",
+    "nodemailer": "^6.6.2",
     "postcss": "^8.3.5",
     "react": "17.0.2",
     "react-dom": "17.0.2",
