add graphql url .env and config.ts

--- a/.env.sample
+++ b/.env.sample
@@ -14,3 +14,5 @@ NODEMAILER_HOST=hostname
 NODEMAILER_PORT=465
 NODEMAILER_SECURE=false
 NODEMAILER_RECIPIENT=user@domain.com
+
+GRAPHQL_URL=http://domain.com/graphql
