--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "postbuild": "next-sitemap",
     "start": "next start",
     "lint": "next lint"
   },
@@ -14,6 +15,7 @@
     "autoprefixer": "^10.2.6",
     "axios": "^0.21.1",
     "next": "11.0.1",
+    "next-sitemap": "^1.6.133",
     "nodemailer": "^6.6.2",
     "postcss": "^8.3.5",
     "react": "17.0.2",
